--- a/src/ZPI.Core/ZPI.Core.csproj
+++ b/src/ZPI.Core/ZPI.Core.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NodaTime" Version="3.1.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Serilog" Version="2.11.0" />
   </ItemGroup>
