Add asset & asset values & user preference endpoints

--- a/src/ZPI/appsettings.json
+++ b/src/ZPI/appsettings.json
@@ -26,6 +26,24 @@
     ],
     "Enrich": ["FromLogContext"]
   },
+  "Authentication": {
+    "DefaultConfig": {
+      "DefaultAuthenticateScheme": "Bearer",
+      "DefaultSignInScheme": "Bearer",
+      "DefaultChallengeScheme": "Bearer"
+    },
+    "JwtBearer": {
+      "RequireHttpsMetadata": true,
+      "MetadataAddress": "https://how-money.eu.auth0.com/.well-known/openid-configuration",
+      "Audience": "https://how-money.com",
+      "Authority": "https://how-money.eu.auth0.com/",
+      "SaveToken": true,
+      "TokenValidationParameters": {
+        "NameClaimType": "name",
+        "RoleClaimType": "role"
+      }
+    }
+  },
   "CorsPolicy": {
     "AllowAnyHeader": true,
     "AllowAnyMethod": true,
