--- a/src/ZPI.Persistance.ZPIDb/ZPI.Persistance.ZPIDb.csproj
+++ b/src/ZPI.Persistance.ZPIDb/ZPI.Persistance.ZPIDb.csproj
@@ -9,6 +9,7 @@
 
  <ItemGroup>   <!-- Packages references -->
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NodaTime" Version="3.1.4" />
     <PackageReference Include="Npgsql" Version="6.0.6" />
     <PackageReference Include="Npgsql.NodaTime" Version="6.0.6" />
