--- a/src/ZPI/appsettings.json
+++ b/src/ZPI/appsettings.json
@@ -26,6 +26,13 @@
     ],
     "Enrich": ["FromLogContext"]
   },
+  "ManagementAPI": {
+    "BasePath": "https://how-money.eu.auth0.com/api/v2/",
+    "TokenEndpointUrl": "https://how-money.eu.auth0.com/oauth/token",
+    "ClientId": "kNzceL02M83CulfpXMD1TOzhNFbbUFzH",
+    "ClientSecret": "Bu9WjH0TY0q9x2pw9EDXixnoqlc6EyqZ_1rzgoWgf9_M7r69MhrQeMV95alTn96M",
+    "Audience": "https://how-money.eu.auth0.com/api/v2/"
+  },
   "Authentication": {
     "DefaultConfig": {
       "DefaultAuthenticateScheme": "Bearer",
