stash worker things

--- a/src/ZPI.Integrations/ZPI.Integrations.csproj
+++ b/src/ZPI.Integrations/ZPI.Integrations.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>    <!-- Projects references -->
     <ProjectReference Include="../ZPI.Core/ZPI.Core.csproj" />
+    <ProjectReference Include="../ZPI.Persistance.ZPIDb/ZPI.Persistance.ZPIDb.csproj" />
   </ItemGroup>
 
 
