--- a/docker/api+db/docker-compose.yaml
+++ b/docker/api+db/docker-compose.yaml
@@ -17,14 +17,20 @@ services:
       - database-data-volume:/var/lib/postgresql/data/ # persist data even if container shuts down
       
   backend:
-    image: 'enszyk/how-money-api:0.1.3'
+    build: '../../'
     restart: unless-stopped
     ports:
-      - 5000:80
+      - 5000:5000
+      - 5001:5001
     depends_on:
       - "database"
     environment:
+      ASPNETCORE_URLS: https://+:5001;http://+:5000
       ASPNETCORE_ENVIRONMENT: "Development"
+      ASPNETCORE_Kestrel__Certificates__Default__Password: password
+      ASPNETCORE_Kestrel__Certificates__Default__Path: /https/aspnetapp.pfx
       Database__ZPI__ConnectionString: "User ID=admin; Password=admin; Server=database;Port=5432;Database=zpi;Integrated Security=true; Pooling=true;"
       Database__ZPI__EnableAutomaticMigration: "True"
       Database__ZPI__PostgresApiVersion: 12.3
+    volumes:
+      - ~/.aspnet/https:/https:ro
