--- a/src/ZPI.Persistance/ZPI.Persistance.csproj
+++ b/src/ZPI.Persistance/ZPI.Persistance.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>    <!-- Packages references -->
     <PackageReference Include="Auth0.ManagementApi" Version="7.17.4" />
     <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="RestSharp" Version="108.0.1" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.9" />
